加入新学习的官方包