@@ -4,6 +4,8 @@
 export JAVA_HOME="/Library/Java/JavaVirtualMachines/jdk-9.jdk/Contents/Home/"
 # export JAVA_HOME="/Library/Java/JavaVirtualMachines/jdk-10.0.1.jdk/Contents/Home/"
 
+# export MAVEN_OPTS="--add-modules java.annotations.common"
+
 echo "当前使用的JAVA的HOME目录是：$JAVA_HOME"
 echo `javac -version`
 export PATH=$JAVA_HOME/bin/:$PATH
